# Proof-Of-Luck-Cryptocurrency

./: CMakeLists.txt  FindSGXSDK.cmake  README.md  commithelper.sh  helperfunctions.cpp  helperfunctions.h  main.cpp
Chain/: block.cpp  block.hpp  blockchain.cpp  blockchain.hpp  merkletree.cpp  merkletree.hpp  transactions.cpp  transactions.hpp
Database/: database.cpp  database.hpp
Enclave/: App.h
Enclave/src/Enclave/: CMakeLists.txt  FindSGXSDK.cmake  Makefile  readme.txt
Enclave/src/Enclave/App/: App.cpp  App.h  Enclave_u.c  Enclave_u.h
Enclave/src/Enclave/Enclave/: Enclave.config.xml  Enclave.cpp  Enclave.edl  Enclave.h  Enclave.pem  Enclave_t.c  Enclave_t.h
Interface/: console.cpp  console.h  consolehandler.cpp  consolehandler.h  gui.cpp  gui.h  gui.ui
Network/: client.cpp  client.h  connection.cpp  connection.h  peermanager.cpp  peermanager.h  server.cpp  server.h
TDSE_FALLBACK/: database.db  keys.txt
TDSE_FALLBACK/2/: keys.txt  publicKey.txt
TDSE_FALLBACK/3/: publicKey.txt
TDSE_FALLBACK/4/: publicKey.txt
TDSE_FALLBACK/5/: fallback.sh  publicKey.txt
TDSE_FALLBACK/6/: publicKey.txt
sodiumpp/: base64.c  base64.cpp  crypt.cpp  crypt.h
sodiumpp/include/sodiumpp/: base64.h  sodiumpp.h
tests/: invalidDB.db  ln.txt  valid105.db  validDB428.db
